--- a/src/components/TodoList.css
+++ b/src/components/TodoList.css
@@ -24,6 +24,11 @@
     display: flex;
     align-items: center;
     margin-bottom: 10px;
+    column-gap: 0.5rem;
+}
+
+.important-item {
+    background: #ffffb0;
 }
 
 .completed {
